<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".activities.PlayCategoryActivity">

    <Button
        android:id="@+id/buttonRandomWordPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="268dp"
        android:backgroundTint="@color/green_button"
        android:text="@string/buttonRandomWordPlay"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUserAddedWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green_button"
        android:text="@string/buttonUserAddedWord"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/buttonRandomWordPlay"
        app:layout_constraintStart_toStartOf="@+id/buttonRandomWordPlay"
        app:layout_constraintTop_toBottomOf="@+id/buttonRandomWordPlay" />

    <Button
        android:id="@+id/buttonPopularWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/green_button"
        android:text="@string/buttonPopularWords"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/buttonRandomWordPlay"
        app:layout_constraintStart_toStartOf="@+id/buttonRandomWordPlay"
        app:layout_constraintTop_toBottomOf="@+id/buttonUserAddedWord" />

    <Button
        android:id="@+id/buttonWeeklyWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/green_button"
        android:text="@string/buttonWeeklyWords"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/buttonRandomWordPlay"
        app:layout_constraintStart_toStartOf="@+id/buttonRandomWordPlay"
        app:layout_constraintTop_toBottomOf="@+id/buttonPopularWords" />
</androidx.constraintlayout.widget.ConstraintLayout>