<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.UpdatePasswordActivity">

    <EditText
        android:id="@+id/textSettingsCurrentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="196dp"
        android:background="@color/green_button"
        android:ems="10"
        android:hint="@string/textSettingsCurrentPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextSettingsNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="18dp"
        android:background="@color/green_button"
        android:ems="10"
        android:hint="@string/TextSettingsNewPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSettingsCurrentPassword" />

    <Button
        android:id="@+id/buttonUpdatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="250dp"
        android:backgroundTint="@color/green_button"
        android:text="@string/buttonUpdatePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextSettingsNewPasswordCheck" />

    <EditText
        android:id="@+id/TextSettingsNewPasswordCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:background="@color/green_button"
        android:ems="10"
        android:hint="@string/TextSettingsNewPasswordCheck"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextSettingsNewPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>