<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.ManualWordAddActivity">

    <EditText
        android:id="@+id/textWordTargetManuelAdded"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/textview_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/textWordTargetManuelAdded"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWordSourceManuelAdded"
        app:layout_constraintVertical_bias="0.366" />

    <EditText
        android:id="@+id/textWordSourceManuelAdded"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/textview_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/textWordSourceManuelAdded"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSaveWordsManualAdded"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/green_button"
        android:text="@string/buttonSaveWordsManualAdded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWordTargetManuelAdded"
        app:layout_constraintVertical_bias="0.291" />

</androidx.constraintlayout.widget.ConstraintLayout>